# rtaco

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
cmake/: build-docs.cmake  build-info.cmake  build-options.cmake  colored-output.cmake  llmx-rtaco-config.cmake.in  make-version.cmake  use-ccache.cmake  utils.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  nl_control_example.cxx  nl_listener_example.cxx
examples/src/: nl_control_example.cxx  nl_dump_addresses_example.cxx  nl_dump_routes_example.cxx
include/llmx/core/: asio.h  context.h  error.h  expected_ext.h  huge_mem_pool.h  io_pool.h  signal.h  types.h  utils.h
include/llmx/net/: ip6.h
include/rtaco/: netlink_address_dump_task.hxx  netlink_control.hxx  netlink_listener.hxx  netlink_neighbor_dump_task.hxx  netlink_neighbor_flush_task.hxx  netlink_neighbor_get_task.hxx  netlink_neighbor_probe_task.hxx  netlink_neighbor_task.hxx  netlink_protocol.hxx  netlink_request_task.hxx  netlink_route_dump_task.hxx  netlink_route_task.hxx  netlink_socket.hxx  netlink_socket_guard.hxx  nl_address_dump_task.hxx  nl_address_event.hxx  nl_address_task.hxx  nl_common.hxx  nl_control.hxx  nl_event.hxx  nl_link_dump_task.hxx  nl_link_event.hxx  nl_link_task.hxx  nl_listener.hxx  nl_neighbor_dump_task.hxx  nl_neighbor_event.hxx  nl_neighbor_flush_task.hxx  nl_neighbor_get_task.hxx  nl_neighbor_probe_task.hxx  nl_neighbor_task.hxx  nl_protocol.hxx  nl_request_task.hxx  nl_route_dump_task.hxx  nl_route_event.hxx  nl_route_task.hxx  nl_signal.hxx  nl_socket.hxx  nl_socket_guard.hxx  nl_utils.hxx
include/rtaco/control/: nl_control.hxx
include/rtaco/core/: nl_common.hxx  nl_control.hxx  nl_listener.hxx  nl_request_task.hxx
include/rtaco/events/: nl_address_event.hxx  nl_link_event.hxx  nl_neighbor_event.hxx  nl_route_event.hxx
include/rtaco/socket/: nl_protocol.hxx  nl_socket.hxx  nl_socket_guard.hxx
include/rtaco/tasks/: nl_address_dump_task.hxx  nl_address_task.hxx  nl_link_dump_task.hxx  nl_link_task.hxx  nl_neighbor_dump_task.hxx  nl_neighbor_flush_task.hxx  nl_neighbor_get_task.hxx  nl_neighbor_probe_task.hxx  nl_neighbor_task.hxx  nl_request_task.hxx  nl_route_dump_task.hxx  nl_route_task.hxx
include/rtaco/tasks/link/: nl_link_task.hxx
include/rtaco/tasks/neighbor/: nl_neighbor_flush_task.hxx
include/rtaco/tasks/route/: nl_route_dump_task.hxx  nl_route_task.hxx
src/: netlink_address_dump_task.cxx  netlink_control.cxx  netlink_event.cxx  netlink_listener.cxx  netlink_neighbor_dump_task.cxx  netlink_neighbor_flush_task.cxx  netlink_neighbor_get_task.cxx  netlink_neighbor_probe_task.cxx  netlink_route_dump_task.cxx  netlink_socket.cxx  netlink_socket_guard.cxx  nl_address_dump_task.cxx  nl_address_event.cxx  nl_control.cxx  nl_event.cxx  nl_link_event.cxx  nl_listener.cxx  nl_neighbor_dump_task.cxx  nl_neighbor_event.cxx  nl_neighbor_flush_task.cxx  nl_neighbor_get_task.cxx  nl_neighbor_probe_task.cxx  nl_route_dump_task.cxx  nl_route_event.cxx  nl_socket.cxx  nl_socket_guard.cxx
src/control/: nl_control.cxx
src/core/: nl_control.cxx  nl_listener.cxx
src/events/: nl_address_event.cxx  nl_link_event.cxx  nl_neighbor_event.cxx  nl_route_event.cxx
src/listener/: nl_listener.cxx
src/socket/: nl_socket.cxx  nl_socket_guard.cxx
src/tasks/: nl_address_dump_task.cxx  nl_link_dump_task.cxx  nl_neighbor_dump_task.cxx  nl_neighbor_flush_task.cxx  nl_neighbor_get_task.cxx  nl_neighbor_probe_task.cxx  nl_route_dump_task.cxx
src/tasks/link/: nl_link_dump_task.cxx
src/tasks/neighbor/: nl_neighbor_get_task.cxx
src/tasks/route/: nl_route_event.cxx
tests/: CMakeLists.txt  test_nl_common.cpp  test_requesttask_compile.cpp  test_signal.cpp  test_socket.cpp
